--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -7,17 +7,24 @@
     "dev": "panda codegen && vite",
     "build": "panda codegen && tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "i18n:extract": "i18next -c i18next-parser.config.json"
   },
   "dependencies": {
     "@livekit/components-react": "2.3.3",
     "@livekit/components-styles": "1.0.12",
     "@pandacss/preset-panda": "0.41.0",
     "@tanstack/react-query": "5.49.2",
+    "hoofd": "1.7.1",
+    "i18next": "23.12.1",
+    "i18next-browser-languagedetector": "8.0.0",
+    "i18next-parser": "9.0.0",
+    "i18next-resources-to-backend": "1.2.1",
     "livekit-client": "2.3.1",
     "react": "18.2.0",
     "react-aria-components": "1.2.1",
     "react-dom": "18.2.0",
+    "react-i18next": "14.1.3",
     "wouter": "3.3.0"
   },
   "devDependencies": {
