🔧(helm) fix helm chart
Fix helm secret to be abble to use titl on dev

--- a/src/helm/env.d/dev/secrets.enc.yaml
+++ b/src/helm/env.d/dev/secrets.enc.yaml
@@ -1,10 +1,14 @@
-djangoSecretKey: ENC[AES256_GCM,data:TulkgSxtL5YSXuEbmM0vOrSezj+Qod7TAReBs3zoZak782Dr56stTweiSjz5ngtRNh8=,iv:VciiRV5UPvGiNk9yHaw1uT0GEzglQ/Xn2UUxjiycZas=,tag:2LvoFqy6jpSBV679yagA5Q==,type:str]
+djangoSecretKey: ENC[AES256_GCM,data:dqeL5W5WaTir+tzUAIbivT1DE0zv1IVsq1/nTU7LRKHO2PUefwsyGAy37eYIeC89q9I=,iv:ODTaWFvvYLHNYRkIX//wY2knKD2uIwf7Mo4UhUBEX9c=,tag:MnE3wLdLcK79XUwXV99w4w==,type:str]
 oidc:
-    clientId: ENC[AES256_GCM,data:7cQzLyVTOqy0OZoL5LEHkBspgqLGzrz02YWma64yzhB+PEj1,iv:vQ49PuVGmms2Y2LIa6uUon0rGO+v0368NuHmpFmqwiE=,tag:39baRMIrS+bvUVpSikgdHg==,type:str]
-    clientSecret: ENC[AES256_GCM,data:e+FMROduwljv1hJp88WtyOFsYcS6r30D8NB5Eg9lrxVLPZlhXE8KOYDFUhqUCEWb5ZvIk5m90V3lngN1nJJHGA==,iv:kY0rWPFoOFHRpOXQIsaipqjBAnaITfNdPVkU9OtJghk=,tag:cP4cDSOl+W8qMMhXpV+vgA==,type:str]
+    clientId: ENC[AES256_GCM,data:X+Qj//JXn9kfVszbe9BNbL8rQ53AJq0Cluq3nG58OyXlv5/y,iv:/Na7zvcsIu5OxJw1uFwiksh8tXfzG9It26jW41E0edQ=,tag:oph41uyMwj3uZMnZPI64ZQ==,type:str]
+    clientSecret: ENC[AES256_GCM,data:2WV+i0pd4wBXiwG8ak+yVROGsmwSaM0X0rEJjFeNeGYtUsHozd5XrurQu6FAB1tQnzTRgRgAU0ob0MqbsMUYhg==,iv:OJZRG+OUD0Fi2HZ0w3Rn+SMFkebMrsQtKvymJkicF28=,tag:PJYzhVvM0gH0xAGrSSPAIQ==,type:str]
+#ENC[AES256_GCM,data:iZjWgYcHtDeK/c1TrfVVsZaJRmuc1+2XEJnLEOYw1wXMsUUvgswEc5PP/4UmirhbSulwtuMRhFt74sIogMxPl2etMAoCqo3ziKRuu3FrmgSUD/bdXQRl+VQ0nJ3NnWNcKqf+GS8=,iv:5hUaA4hkABLvXoKVE4TNZevOdUCaCy3zYkGajHpmZ5k=,tag:ikiSAyIly8NAgVA0olASRw==,type:comment]
 livekit:
     keys:
-        devkey: ENC[AES256_GCM,data:qlvVa2A1,iv:MNxLlo6Hl3/O/p2JqBLjoe3fmSfhvyAZdv34yKHAHRs=,tag:4rO+fpeweGcyhg93kCN0BA==,type:str]
+        devkey: ENC[AES256_GCM,data:deDMTTO9,iv:ZCloCUPRJ7PG2KcGsnhVj3lRDfCmJowwp8PVg4fdTmg=,tag:zCh8lQT29kQbY7LiXHNEiA==,type:str]
+livekitApi:
+    key: ENC[AES256_GCM,data:fh0zJSUE,iv:yR5siulW5vlO/Ew8qtYFNNtyODOPm3d3NL4SVCzzVcM=,tag:hLtEuonLJoi0eFJmY0RYEg==,type:str]
+    secret: ENC[AES256_GCM,data:81SOHzA6,iv:is7QdB/T58IP41SrPyDdFHtyX57tphb9Gpf/aQ7NnTY=,tag:1E03R+EFYmLtxFoIDcVEHg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,68 +18,68 @@ sops:
         - recipient: age15fyxdwmg5mvldtqqus87xspuws2u0cpvwheehrtvkexj4tnsqqysw6re2x
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5LzE5S3h6c3g3WXlpYVRS
-            V3lwZWl4YVVudncwMWxwL09KQ1IrWUFmZFVnCmRMcXM1ZUtISVBtcU1xU0pVVDVx
-            NlBYbDVRbUlNQzU4VS9vZEE1U3p5V1EKLS0tIGhDVldDa1crS2hkY2JkQTMxRDVC
-            SDZXcThPRGJKaXV5aWlheG1NdTY4d1kK5kqtaAlzs8rTYTggpWC0OOk/TOKxxQId
-            ec3ZLFN8g/JZiakPola/+u4hsIxkV+y0fUs2CwlDFJnEBwdkNPpBQw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwZG8rTjAzcVNtVHdLZmJI
+            Mm4vemNrV1dDUExEZ1R1UGJmWjN3aWw1VXc0CjF1MVhhUTV6ckl1OEFNSjBJUCta
+            MTE3QU04RDJKMWlWcHhDSG1NTmZyTkEKLS0tIHh5UHRqckUxZWZLUDl4d3FDdHJs
+            Y0VMc0llMytmMWNUOW56d3ltTHpwZ2cKEHkn6wuHNeMTk+E6nEMpEJZ6wpdXSi3k
+            FkzXRa6SudAgA4R6K9EieHKPdiNvi0IsCJOhLpiNQtENu9poF5ozqQ==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age16hnlml8yv4ynwy0seer57g8qww075crd0g7nsundz3pj4wk7m3vqftszg7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMcU02c2RTcWxIb2gxVVBl
-            N004cXRIT0FOa0JKeTNaSytsa1BBdTdvaTFZCkFzN0tNcEcvZUpjaHdvR0NBUDNp
-            M1pRckcyK2IxSnZid2o3bG5hNXl3YjgKLS0tIDNJSHp2YmovZzgwUEU5ZWRkQUtu
-            ZEFxQ0EzVEJCenVxeVFOMWlrMEd6eTQK8RRV0lbOkJaRrHK1yTTQv8Kly2Bccatu
-            I3ED05o1CaWP+qPYSDmaChzewAW1J2C0AU9k8dpEd94jRIve3nhQMw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAva3lFTTM2ZUJpcnozNmJt
+            ZHAvRndkSjRCVEZYN29wMWFZVmV5ekNiYW5FCkI3RWUvVTdVZ2dJeWVSY085SW5G
+            UWNOempRQlFCUUlmL0RIR1ZZZVI5cDQKLS0tIEpwZkVodENLM1VnQ1o1TmhRSFFi
+            ZEF5MUNVdHRKcW9aK0M2M0ZVNDBxbjgKw8Wp06PcoStrO6ppsOR5zWjXbYrP64Dv
+            XAEHQMa7vyvuu12YIa/fpyDM4HrsrPq3OWudxuWS6p0X8xmPYrXm6g==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1plkp8td6zzfcavjusmsfrlk54t9vn8jjxm8zaz7cmnr7kzl2nfnsd54hwg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTcWl1alFtSkIyM1BvSnAw
-            YlAxM2RjOXdzUVRDOTUrUVZIWWFQSmd4dWdBCjQ4SUQ1eXdpSmdzMlM3UnlTTy9D
-            clBOcFFWOWtaZU9OU1JoRXNCbXJ5SVUKLS0tIG1NbUZKajQ5dno3Z2d6NzJtbUNQ
-            WXRDM1dEeXB5SU52UmVVaFUxTUVLbkkKS3oAFk1CYB03vbXm9Xb4P24/Xui0LM+h
-            ++ykAOWuHjZ0mHbvPXOeS6VFXchdVWtQiHYW6eo3ya524Pq3C3l34Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1OU9mZHZFanpTQjE3aGly
+            VVZDWFh5ZmRHV1YwWUtsZVd6R090SnkxVVNVCmM1UWwwaFlqTHlhSGFRblZBbVhl
+            aEhtWWp1N1lVTDNqOFJBL0swVFl3Y3cKLS0tIG5ZTHAveFdLdGhQeUc2Tzh1d0dw
+            UzRhNGNTZFR3U3BLNFhCdFp6aU5uZVEKL4K5jFjPfMp/fMA8+nQerj6PE5zvGeHW
+            1SuHwnDiglKmksj8Gy+7spwLQCmo11JCnW2gXKktVIe5XOyhortq3Q==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age12g6f5fse25tgrwweleh4jls3qs52hey2edh759smulwmk5lnzadslu2cp3
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWaGtjcUdZWHFSNGttM1Z3
-            VFd3SWQ2OFZBRlc3NEJTMWZUa3BPOW9uMGo0CnZyOHRWazdEVzg0VUdEMVdFVXRy
-            TDFRWW9QYkVzeVoyRVVJNVNIVVRaUHMKLS0tIEFZU1l6THp5bElSMnlCUVN1VitJ
-            RnhnaElLMjNhUUpkQURQZm82ZTJxOVEKXCvgYbPMsYWT13TpFTZevGX3ZBKb2/Yd
-            CaBO0I4Ij2ykyK2X3qqJRAPI1cTKROTVv5GCvilxEZWcq0lLwhfNWQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4Z1lXM0tDRzJnMytDZHBV
+            ZlpCcTg0U3RGeEVzN2dBMkFYa0FBMFVKMWw4Cm5KeWMvdFBRNHFJWFNSS3NVWlNQ
+            dnhkc2F2MFVTMmVHT2U2STdUWWcvNzAKLS0tIHkzQXltQW5TWHVrektQU1hES1ll
+            UnVld1laTWRmTlkzWHRKRjJmWVJhbU0KANxoSnhDbxsja+Eo8MVCGv6iThNmlo/m
+            y0RXVNVqNlqTreT0F/SKmP74W3lF30nwsfrOywMQyu75k8p5MGwUuQ==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1tl80n23wq6zxegupwn70ew0yp225ua5v4dk800x7g2w6pvlxz46qk592pa
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzbkUrMitDdlJzVUVucFIz
-            Q2drWDAxcVFhWE5SSDdhVW9wM09oZjI1K1JVClE1MkpYejZxM0dxSTBFWkt0WjR1
-            Smo5TkEvNzByaDZ0dmMvS25kMUV4QmMKLS0tIEtkaTMyNmw5LzNESVhKTHZKL0E5
-            WnBhdWRZd1N2a1VBdVpuR2JCYUhINk0KaREjyKJ2ieF72TSuFX5as8odtKQacspa
-            S/Bsu2YI2YnCKyuL2BOHVT0ETZXyv29a70yxLAWFgnZNEj/MYXzLFw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwUm9oT3RYbGZXaW5CM20r
+            QlYyeGZjMG05MFNzdndCU2dUemZqdXF5Um1FCkZWdVlubW1MZ3NwM3V2S3dQRFA1
+            cHVvOXBMMGtMdkF4T2s3Wk9wYkJUZUEKLS0tIFBRM3FWYTRrVDNwZStwQWlpbEYx
+            dXA5WE5udnhhMVdLTk1jMzJuU3VWaTQKaxTpyqi5fjmOFR4qOxm+wSqWDxb/96QI
+            rHGUI+CqMVKZ6w1fMH0uanvCuw7Q9rbmsKB+DsjARMLFGqxzP/psUA==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1qy04neuzwpasmvljqrcvhwnf0kz5cpyteze38c8avp0czewskasszv9pyw
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4U0kzTmw0N3hMK0lxVFZX
-            MzRuT2k4WGpxZzZyWmV1dUxvMmhqdHhNekJJCnQ3YXpSVUhoYllKc0FBdStIZ2hK
-            N0o5UWNTMXk3OHlCVldSREJkNTJSR1EKLS0tIEx3NzBjMi9Pa3NsN24yekltaW1h
-            RnVweWw1L0RmTDVURGZoTEg5czkyem8KA/VyWUoqAO4+2MJeIAwtKo5GVOyUK7Mq
-            IDUlHULo5kKZ/DglNwcoErV7MzWFunjXCIseXBPieMrZQ1vC5OJrvA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwMmVOaHV1Unl4UmUrVXEy
+            REJIYWZhQmt3R0R5RFRveTl4Z0JaZlpKNmd3Ckl0dkFUaG90TE5odVh0YVprMVZj
+            T2tXS0dSRGVVczdhb1dlVlV0L3JZUncKLS0tIGo2RDBPZXNzU2dQQlJhY0NBS2ps
+            RW92OFVTS3d2L3UxOXNrVUFSVFI5TXMKn3pdHbXxBccG6Q+gWPVQK/5wiIKkzdhm
+            HiNzezStrkFHf/lsFS2LNgYkfMMzBQ4rJj7oQkrD1Z8j6qRld3zzLg==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age18fgn6j2vwwswqcpv9xpcehq8mrf9zs2sglwkamp3tzwx8d9jq9jsrskrk9
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJQ1Z2UlozTzJsQlBlbnhS
-            UzJiZFZwK2lXUTVnQVBEQUIxOVU0QzVDUjE4CllhMWc0Nzh1Z3FOTU1ESkE1bW5B
-            TFFPUjJRUGxiMnBtUktoYk1LamQ0bmMKLS0tIGdPbWFBdDNUUmpIdnN4dCtmamc2
-            MDJiYzhvNlUvQTlsbUdYdmJkYjNaN3MKdccBEm9dj2Cs3km527bx3w2d3b/rJOi2
-            QzgHJKaRS3rdCRkXj/cxW0rVgI8twvVj/WV1Into1qKRcAKI6f5zfw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzeWN4ZE5Ya3RPV2VKRFdv
+            UGQ4QTJUZFovSXpQREhNWXdQbktVUHFQaUhjCmM1dXNxbGdlVjBWNjc5L2E5QlBy
+            NjI0S251cjZvYU1nQ2swWXVDdjdhSG8KLS0tIHdFNXptN1VBNytFNW40MUsxTGFM
+            WlVnc3VLY1ZReDFxUVlqWU9rM0xMQ00Kq/ckdP1N4BDBo0pSH9pp36skIacwNm3d
+            utiuCgG16Hqe6YDb3agx81BocuSJ9oMOdpegoztnkkBDDP0F+e/VuQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-12T08:47:29Z"
-    mac: ENC[AES256_GCM,data:slPiXUVmoLGwg3VbsFNAENY84+bSCDQset6cEtbf7LJjJx30/Jqrdg0VXOv/aFmIJsb5mLaPUlylLt36MTw8IYxRPKYY5Gj3yXWRz2SaSX7QKZAba0k5z9MvGy0FjCDlSVe0Xm+SXUoA37t6NFKHgz54Bh2+CLX1H8i7EbZA1ak=,iv:pyjiNZBvq/4u5kiXAzlqu1C4qbupjCZez5Z9vRXLnIg=,tag:EXzeWMfPJGNy4uKXmCdAzA==,type:str]
+    lastmodified: "2024-07-18T13:08:42Z"
+    mac: ENC[AES256_GCM,data:a/uHyw9V/SMIePV9nPf+wJgPg+YDYLJGYy7NMLBrBgCXtBWHHonSNjzdmtjix1bW2y+cU0gMqodrtqR1cJGBmXr4NRY7NJqgLWE9rEdYfG7BnfqsWmvAaTIrSs7QMZWkEic7ys/bXoA5BZoau3olhVqIO2A/iyBtoMU9Hv7hPlo=,iv:gaqSCUbN7cxWPNrFPDTl7xNxpOZL6GY/swD/MDCiRqk=,tag:Oz0f/DyD3KGV/9Rprj/1Xw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
