--- a/crowdin/config.yml
+++ b/crowdin/config.yml
@@ -1,7 +1,7 @@
 #
 # Your crowdin's credentials
 #
-api_token_env: CROWDIN_API_TOKEN
+api_token_env: CROWDIN_PERSONAL_TOKEN
 project_id_env: CROWDIN_PROJECT_ID
 base_path_env: CROWDIN_BASE_PATH
 
@@ -14,16 +14,17 @@ preserve_hierarchy: true
 #
 # Files configuration
 #
-files: [
- {
-  source : "/backend/locale/django.pot",
-  dest: "/backend-meet.pot",
-  translation : "/backend/locale/%locale_with_underscore%/LC_MESSAGES/django.po"
- },
-  {
-    source: "/frontend/packages/i18n/locales/impress/translations-crowdin.json",
-    dest: "/frontend-impress.json",
-    translation: "/frontend/packages/i18n/locales/impress/%two_letters_code%/translations.json",
-    skip_untranslated_strings: true,
-  },
-]
+files:
+  [
+    {
+      source: "src/backend/locale/django.pot",
+      dest: "/backend-meet.pot",
+      translation: "src/backend/locale/%locale_with_underscore%/LC_MESSAGES/django.po",
+    },
+    {
+      source: "src/frontend/src/locales/fr/**/*",
+      translation: "src/frontend/src/locales/%two_letters_code%/**/%original_file_name%",
+      dest: "/%original_file_name%",
+      skip_untranslated_strings: true,
+    },
+  ]
