--- a/env.d/development/crowdin.dist
+++ b/env.d/development/crowdin.dist
@@ -1,3 +1,3 @@
-CROWDIN_API_TOKEN=Your-Api-Token
+CROWDIN_PERSONAL_TOKEN=Your-Api-Token
 CROWDIN_PROJECT_ID=Your-Project-Id
-CROWDIN_BASE_PATH=/app/src
+CROWDIN_BASE_PATH=/app
