wip install whisper-related dependencies
torch and transformers (from HF) are the basis to make a model run

optimum (from HF) and accelerate are recommended on the insanely-fast-whisper readme,
to make the whisper model run faster

--- a/src/data/transcribe/pyproject.toml
+++ b/src/data/transcribe/pyproject.toml
@@ -30,6 +30,10 @@ dependencies = [
     "pydantic[dotenv]==1.10.16",
     "python-jose[cryptography]==3.3.0",
     "uvicorn[standard]==0.30.1",
+    "torch==2.3.1",
+    "transformers==4.42.4",
+    "optimum==1.21.2",
+    "accelerate==0.32.1"
 ]
 
 [project.urls]
