--- a/src/data/dockerfile
+++ b/src/data/dockerfile
@@ -55,6 +55,9 @@ COPY ./src/data/transcribe /app/
 
 WORKDIR /app
 
+RUN mkdir -p ./cache/
+ENV HF_HOME=./cache/
+
 # We wrap commands run in this container by the following entrypoint that
 # creates a user on-the-fly with the container user ID (see USER) and root group
 # ID.
@@ -66,6 +69,10 @@ FROM core as production
 
 # Un-privileged user running the application
 ARG DOCKER_USER=1000
+
+# Ensure the Docker user has write permissions to the cache directory
+RUN chown -R ${DOCKER_USER} ./cache/
+
 USER ${DOCKER_USER}
 
 CMD ["uvicorn", \
