➕(backend) add analytics dependency
I've chosen June, a closed project, for our product analysis. Please note that
this is temporary until we find our product-market fit and achieve
significant traction.

I selected June for several reasons, particularly their focus on pre-product-
market fit (PMF) analysis, which is crucial for us. Their approach will help us
track user engagement and identify the most important features.

Remember, the purpose of this data is not to provide definitive answers about
our product, but to prompt us to ask the right questions and engage with users
to find the answers.

--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     "freezegun==1.5.1",
     "gunicorn==22.0.0",
     "jsonschema==4.23.0",
+    "june-analytics-python==2.3.0",
     "markdown==3.6",
     "nested-multipart-parser==1.5.0",
     "psycopg[binary]==3.2.1",
