--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@livekit/components-react": "2.3.3",
     "@livekit/components-styles": "1.0.12",
+    "@livekit/track-processors": "0.3.2",
     "@pandacss/preset-panda": "0.41.0",
     "@remixicon/react": "4.2.0",
     "@tanstack/react-query": "5.49.2",
