♻️(mail) refactor mail to use npm instead of yarn
Following @manuhabitela's recommendation, we've decided to switch
from Yarn to npm for managing our Node.js dependencies. This update
aligns all remaining parts of the codebase that were still using
Yarn to now utilize npm.

--- a/src/mail/package.json
+++ b/src/mail/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build-mjml-to-html": "bash ./bin/mjml-to-html",
     "build-html-to-plain-text": "bash ./bin/html-to-plain-text",
-    "build": "yarn build-mjml-to-html && yarn build-html-to-plain-text"
+    "build": "npm run build-mjml-to-html && npm run build-html-to-plain-text"
   },
   "volta": {
     "node": "16.15.1"
