--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -29,6 +29,7 @@
     "react-aria-components": "1.2.1",
     "react-dom": "18.2.0",
     "react-i18next": "14.1.3",
+    "use-sound": "4.0.3",
     "valtio": "1.13.2",
     "wouter": "3.3.0"
   },
