🚧(backend) poc email all owners of a room
Dirty code, missing proper exceptions catching,
permissions etc.

Try to deploy it on staging, see if email are sent.

--- a/env.d/development/common.dist
+++ b/env.d/development/common.dist
@@ -42,3 +42,4 @@ LIVEKIT_API_SECRET=secret
 LIVEKIT_API_KEY=devkey
 LIVEKIT_API_URL=http://localhost:7880
 ALLOW_UNREGISTERED_ROOMS=False
+WORKER_SECRET=DevPurposeOnly
