--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@livekit/components-react": "2.5.4",
     "@livekit/components-styles": "1.1.2",
+    "@livekit/track-processors": "0.3.2",
     "@pandacss/preset-panda": "0.46.0",
     "@react-aria/toast": "3.0.0-beta.15",
     "@remixicon/react": "4.2.0",
