--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -25,6 +25,7 @@
     "i18next-parser": "9.0.2",
     "i18next-resources-to-backend": "1.2.1",
     "livekit-client": "2.5.1",
+    "posthog-js": "1.161.5",
     "react": "18.3.1",
     "react-aria-components": "1.3.3",
     "react-dom": "18.3.1",
