--- a/src/helm/helmfile.yaml
+++ b/src/helm/helmfile.yaml
@@ -41,7 +41,6 @@ releases:
     - addRedirect: {{ .Values | get "addRedirect" "False" }}
       enablePermanentRedirect: {{ .Values | get "enablePermanentRedirect" "False"}}
       oldDomain: {{ .Values | get "oldDomain" "demo.com" }}
-      tlsOldSecretName: {{ .Values | get "tlsOldSecretName" "tls"}}
       newDomain: {{ .Values | get "newDomain" "demo.com" }}
 
   - name: meet
@@ -74,7 +73,6 @@ environments:
         addRedirect: True
         enablePermanentRedirect: True
         oldDomain: meet-staging.beta.numerique.gouv.fr
-        tlsOldSecretName: meet-tls
         newDomain: visio-staging.beta.numerique.gouv.fr
     secrets:
       - env.d/{{ .Environment.Name }}/secrets.enc.yaml
@@ -86,5 +84,9 @@ environments:
   production:
     values:
       - version: 0.0.1
+        addRedirect: True
+        enablePermanentRedirect: True
+        oldDomain: meet.numerique.gouv.fr
+        newDomain: visio.numerique.gouv.fr
     secrets:
       - env.d/{{ .Environment.Name }}/secrets.enc.yaml
