--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -20,6 +20,7 @@
     "@react-aria/toast": "3.0.0-beta.15",
     "@remixicon/react": "4.2.0",
     "@tanstack/react-query": "5.56.2",
+    "crisp-sdk-web": "1.0.25",
     "hoofd": "1.7.1",
     "i18next": "23.15.1",
     "i18next-browser-languagedetector": "8.0.0",
